# xmu-calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  nist-atom-weight.txt  xmu-calculator.pro  xmudata.cpp  xmudata.h  xmudata.qrc  xmudialog.cpp  xmudialog.h
